# coin_collector_sfml

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  main.cpp
game_objects/coin/: coin.cpp  coin.hpp
game_objects/player/: player.cpp  player.hpp
utilities/audio_manager/: audio_manager.cpp  audio_manager.hpp
utilities/game_manager/: game_manager.cpp  game_manager.hpp
utilities/hud/: hud.cpp  hud.hpp
utilities/sprite_group/: sprite_group.hpp
